<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/input_navigation_icon"
        android:title="@string/title_input" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/settings_navigation_icon"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/saved_navigation_icon"
        android:title="@string/title_saved" />

    <item
        android:id="@+id/chart_viewer"
        android:icon="@drawable/ic_action_name_4"
        android:title="@string/title_charts" />

</menu>
