<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="notDefined"
        android:entries="@array/orientationArray"
        android:entryValues="@array/orientationArray"
        android:key="orientation"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency"
        android:summary="Choose how you are holding the device while typing"/>

    <ListPreference
        android:defaultValue="notDefined"
        android:entries="@array/deviceArray"
        android:entryValues="@array/deviceArray"
        android:key="deviceType"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_system_sync_settings"
        android:summary="Choose device type you are testing the keyboard on"/>
    <EditTextPreference
        android:hint="Enter devices screen size"
        android:capitalize="words"
        android:inputType="number"
        android:key="numberOfPhrases"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/screenSize"
        android:defaultValue="0"
        android:summary="Type in diagonal length of the screen"
        />


</PreferenceScreen>
